--- a/learning/templates/learning/index.html
+++ b/learning/templates/learning/index.html
@@ -14,7 +14,7 @@
                <div class="col-sm-20 col-lg-4">
                     <div class="thumbnail">
                         <a href="{% url 'learning:detail' course.id %}">
-                            <img src="{{ course.course_logo.url }}" class="img-responsive">
+                            <img src="{{ course.course_logo.url }}">
                         </a>
 
 
