Updating content display

--- a/learning/templates/learning/content_display.html
+++ b/learning/templates/learning/content_display.html
@@ -34,7 +34,7 @@
                     <br class="col-sm-offset-1 col-sm-10">
                     <h2 style="color:green; align:left">&nbsp;&nbsp;{{course_content.course_content_description}}</h2></br>
 
-                    <img src="{{ course_content.course_content1.url }}" height="100" width="100" class="img-responsive">
+                    <img src="{{ course_content.course_content1.url }}" class="img-responsive">
                      </div>
 
 
