--- a/learning/templates/learning/endAlternateQuiz.html
+++ b/learning/templates/learning/endAlternateQuiz.html
@@ -36,7 +36,7 @@
                     <br>
                     <br>
 
-                    <a target="_blank" href="{% url 'learning:detail' course.id%}">
+                    <a href="{% url 'learning:detail' course.id%}">
                                  <button type="button" class="btn btn-success btn-md-9">
                                  &nbsp; Back to Lesson List
                             </button></a>
