--- a/learning/templates/learning/login.html
+++ b/learning/templates/learning/login.html
@@ -46,8 +46,8 @@
              <div class="col-sm-12 col-md-5">
             <div class="panel panel-default">
                 <div class="panel-body">
-                    <h3>What is LearnMaths?</h3>
-                    <p>LearnMaths is an intelligent tutoring system created to assist students.</p>
+                    <h3>What is LearnMath?</h3>
+                    <p>LearnMath is an intelligent tutoring system created to assist students.</p>
                     <h3>How does it work?</h3>
                     <p>It teaches mathematical concepts to students, by adapting the instruction material according
                     to the need of students.</p>
