--- a/learning/templates/learning/base_visitor.html
+++ b/learning/templates/learning/base_visitor.html
@@ -23,7 +23,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{% url 'learning:index' %}">LearnMaths</a>
+            <a class="navbar-brand" href="{% url 'learning:index' %}">LearnMath</a>
         </div>
 
         <!-- Items -->
